# feather_gemm

./: CMakeLists.txt  README.md  cublas_sgemm.cu  dummy_kernel.cu  main.cu  triton_matmul.py
docs/: bankconflict.vsdx  global_store.vsdx  ncu profiler.vsdx  perf table.xlsx  presentation.pptx  profile_tutorial.md  tiled_matmul.vsdx  warp_tile.vsdx
docs/profile_result/A100-PCIE-40GB/MNK=2048/: kernel_0.txt  kernel_1.txt  kernel_2.txt
docs/profile_result/RTX4060/: 00_cublas.ncu-rep  02_coalesce_memory.ncu-rep  05_8x_compute.ncu-rep  06_more_compute.ncu-rep
docs/profile_result/RTX4060/ChangeSize/1024/: 00_cublas.ncu-rep  01_naive.ncu-rep  02_coalesce_memory.ncu-rep  03_tiled.ncu-rep  04_4x_coarsen_tiled.ncu-rep  05_8x_compute.ncu-rep  06_more_compute.ncu-rep  07_vectorize.ncu-rep  08_warp_tile.ncu-rep  09_double_buffering.ncu-rep
docs/profile_result/RTX4060/MNK=2048/: 00_cublas.ncu-occ  01_naive.ncu-rep  03_tiled.ncu-rep  04_4x_coarsen_tiled.ncu-rep  07_vectorize.ncu-occ  08_warp_tile.ncu-occ  09_double_buffering.ncu-occ
include/: kernels.cuh  run_utils.cuh
include/kernels/: 00_cublas.cuh  01_naive.cuh  02_coalesce_memory.cuh  03_tiled.cuh  04_4x_coarsen_tiled.cuh  05_8x_compute.cuh  06_more_compute.cuh  07_vectorize.h  08_warp_tile.cuh  09_double_buffering.cuh
scripts/: MNK=2048_visualization.ipynb  README.md  change_size_visualization.ipynb  lock_gpu_clock.sh  profile.sh  query_gpu_clock.sh  query_gpu_status.sh  run_main.sh  unlock_gpu_clock.sh
src/: run_utils.cu
src/kernels/: 00_cublas.cu  01_navie.cu
(+61 files in other folders)
